--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "description": "Markdown text extension",
   "type": "silverstripe-vendormodule",
   "minimum-stability": "dev",
-  "license": "proprietary",
+  "license": "BSD-3",
   "authors": [
     {
       "name": "Tim Burt",
@@ -14,9 +14,8 @@
       "email": "james.h@biffbangpow.com"
     }
   ],
-  "require": {
-    "silverstripe/vendor-plugin": "^1.0",
-    "silverstripe/cms": "^4"
+  "require": {    
+    "silverstripe/cms": "^4|^5"
   },
   "autoload": {
     "psr-4": {
