--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "description": "Markdown text extension",
   "type": "silverstripe-vendormodule",
   "minimum-stability": "dev",
-  "license": "BSD-3",
+  "license": "BSD-3-Clause",
   "authors": [
     {
       "name": "Tim Burt",
